# Nexus

./: .env.example  .gitignore  PagerDuty Incident Report.json  README.md  ROADMAP.md  docker-compose.monitoring.yml  docker-compose.yml  kubernetes_issue_injector.sh  nginx.conf
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  api_server.py  check_notion_activity.py  demo_chaos_insights.py  enable_yolo_mode.sh  kind-config.yaml  main.py  mypy.ini  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  setup-k8s-local.sh  setup-kind-cluster.sh  setup-kubernetes-mcp.sh  simulate-k8s-incidents.sh  simulate-k8s-issues.sh  start-api-with-mcp.sh  start-dev-server.sh  start-dev.sh  start-kubernetes-mcp-server.sh  test-app.yaml  test_agno_mcp.py  test_alert_flow.py  test_crud_alerts.py  test_github_integration.py  test_pagerduty_key.sh
backend/.claude/: settings.local.json
backend/scripts/: validate.sh  verify_integrations.py
backend/src/oncall_agent/: __init__.py  agent.py  agent_commands.py  agent_enhanced.py  agent_executor.py  agent_executor_mcp.py  agno_github_agent.py  agno_kubernetes_agent.py  approval_manager.py  config.py  enhanced_agent.py  frontend_integration.py  main.py  mcp.py  metrics.py  pagerduty_client.py  remediation_pipeline.py
backend/src/oncall_agent/api/: __init__.py  alert_context_parser.py  dependencies.py  log_streaming.py  oncall_agent_trigger.py  schemas.py  webhooks.py  webhooks_backup.py
backend/src/oncall_agent/mcp/: __init__.py  client.py
backend/src/oncall_agent/mcp_integrations/: __init__.py  base.py  github_agno_mcp.py  github_mcp.py  grafana_mcp.py  kubernetes_agno_mcp.py  kubernetes_direct.py  kubernetes_manusa_mcp.py  kubernetes_mcp_stdio.py  notion_direct.py  placeholder.py
backend/src/oncall_agent/models/: api_key.py
backend/src/oncall_agent/security/: encryption.py
backend/src/oncall_agent/services/: __init__.py  (+11 more)
backend/tests/: test_eks_scenarios.py  test_github_integration.py  test_notion.py
(+224 files in other folders)
